# RACA

./: .gitignore  LICENSE  README.md  install.sh  uninstall.sh  update.sh
.claude/: CLAUDE.md  codemap.md
.claude/agents/: data-validator.md  red-team-reviewer.md
.claude/commands/raca/: benchmark-reference.md  dashboard-sync.md  experiment-preflight.md  experiment-tutorial.md  find-compute.md  harvest-and-report.md  onboarding.md  update.md
.claude/hooks/: public-projects-safety.sh
.claude/references/: experiments.md  huggingface-datasets.md  tool-decision-guide.md  workspace.md
.claude/references/datasets_and_tasks/: countdown.md  datasets_and_tasks_map.md
.claude/rules/: experiments.md  huggingface.md  workspace.md
.claude/skills/dashboard-visualizer/: SKILL.md
.claude/skills/experiment-management/: SKILL.md
docs/: commands-and-skills.md
docs/blog/: RELEASE.md
notes/: README.md  superpowers-to-science-superpowers-migration.md
private_projects/: README.md
public_projects/: README.md
tools/: README.md  setup-agent-deck.sh
tools/chat-ui/: __init__.py  __main__.py  chat_server.py
tools/cli/: pyproject.toml
tools/cli/raca/: __init__.py  auth.py  cli.py  cluster.py  config.py  disconnect.py  download.py  forward.py  login_guard.py  persistent.py  setup_cluster.py  ssh.py  ssh_session.py  upload.py
tools/cli/raca/tests/: test_cli_guards.py  test_config.py  test_login_guard.py  test_persistent_parsing.py  test_ssh_session.py
tools/visualizer/: .dockerignore  .gitignore  .hfignore  CLAUDE.md  Dockerfile  README.md  nginx.conf  start.sh
(+68 files in other folders)
